2007-08-19  Daniel Morales <daniel@suruware.com>
	
	* src/main.c (main): checking if home_timeline isn't NULL
	* src/gui.c (tt_gui_create_dialogo_login): checking if user and password
	are not NULL before set_text
	* src/network.c (tt_on_get_timeline && tt_network_get_data): bugfix when
	setting	current_timeline.
	* src/gui.c (tt_gui_ventana_principal): Defaults settings are TRUE
	* src/gui.c (tt_gui_create_dialogo_login): auth_remember data fixes.


2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/main.c (main): let's remember to shutdown gconf.
	
2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>
 
	* data/Makefile.am:
	* data/twitux.png:
	* data/twitux-side.png:
	* data/twitux-loading.png:
	* data/twitux-top.png:
	* data/twitux.desktop.in.in:
	* data/twitux.schemas.in:
	* po/POTFILES.in:
	* po/POTFILES.skop: Consolidate misc data files
	into one directory.

	* cofigure.in:
	* Makefile.am: Modify fixes necessary for directory 
	changes.

	* twitux.desktop.in:
	* twitux.schemas.in:
	* pixmaps/*: remove unnecessary files & directory.	
	
2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>

	* po/POTFILES: remove src/conf.c, so that make distcheck
	works again.
	
2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* twitux.schemas.in:
	* Makefile.am: Add missing bits for gconf, and
	libtwitux.

	* libtwitux/twitux-paths.[ch]: Add helper library.

	* po/POTFILES.in: Add schemas to list of files that need
	to be translated.
	
	* src/twitux-preferences.h: Add header with gconf keys.
	* src/gcommon.[ch]: remove open_web_browser function.
	
	* src/Makefile.am:
	* src/callbacks.[ch]:
	* src/gui.[ch]:
	* src/main.[ch]:
	* src/network.[ch]
	* src/twitter.c: used twitux-conf.[ch], instead of 
	TwiTuxConfig.
	
	* src/conf.[ch]: REMOVED files, since we're using
	libtwitux/twitux-conf.[ch] instead.

2007-08-15  Brian Pepple  <bpepple@fedoraproject.org>

	* libtwitux/Makefile.am: 
	* libtwitux/twitux-conf.[ch]: