@@ -1,3 +1,6 @@
+2007-08-20  Daniel Morales <daniel@suruware.com>
+	* Added a small feature: add other users to follow.
+
 2007-08-19  Daniel Morales <daniel@suruware.com>
 	
 	* src/main.c (main): checking if home_timeline isn't NULL
